# westwood

./: .nvim.lua  .rustfmt.toml  CODEOWNERS  Cargo.toml  README.md  TODO.md
.config/: nextest.toml
.github/workflows/: build.yml  ci.yml  publish-docs.yml  release.yml  test.yml
.nvim/queries/rust/: injections.scm
crashlog/: Cargo.toml  README.md
crashlog/examples/: backtrace.rs  crash.rs  custom_message.rs
crashlog/src/: lib.rs
crashlog/tests/: output.rs
src/: diagnostic.rs  helpers.rs  main.rs  panic.rs
src/helpers/: mod.rs  testing.rs
src/rules/: api.rs  mod.rs  rule01a.rs  rule01b.rs  rule01c.rs  rule01d.rs  rule02a.rs  rule02b.rs  rule03a.rs  rule03b.rs  rule03c.rs  rule03d.rs  rule03e.rs  rule03f.rs  rule11a.rs  rule11b.rs  rule11e.rs  rule12a.rs  rule1a.rs  rule1b.rs  rule1c.rs  rule1d.rs  rule2a.rs  rule2b.rs  rule3a.rs  rule3b.rs  rule3c.rs  rule3d.rs  rule3e.rs  rule3f.rs
