[package]
name = "westwood"
version = "0.0.0"
description = "A C source code linter for Purdue's CS 240 course"
repository = "https://github.com/kdkasad/westwood"
license = "Apache-2.0"
authors = ["Kian Kasad <kian@kasad.com>"]
edition = "2021"
rust-version = "1.85"
exclude = ["/.nvim*", "/.github/"]

[build-dependencies]
cc = "*"

[dependencies]
clap = { version = "4.5.31", features = ["cargo", "derive"] }
clap-stdin = "0.6.0"
codespan-reporting = "0.12.0"
getrandom = "0.3.3"
indoc = "2.0.6"
os_info = "3.11.0"
tree-sitter = "0.25.3"
tree-sitter-c = "0.23.4"
unicode-width = { version = "0.2.0", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"
