[package]
name = "crashlog"
version = "0.0.0"
description = "Panic handling for humans"
categories = ["rust-patterns"]
keywords = ["panic", "crash", "report", "cli"]

# Inherit these keys from workspace
repository.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
getrandom = "0.3.3"
os_info = "3.11.0"
