[package]
name = "crashlog"
version = "0.1.2"
description = "Panic handling for humans"
homepage = "https://github.com/kdkasad/westwood/tree/master/crashlog"
categories = ["rust-patterns"]
keywords = ["panic", "crash", "report", "cli"]

# Inherit these keys from workspace
repository.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["now"], default-features = false }
getrandom = "0.3.3"
os_info = { version = "3.11.0", default-features = false }
